fix the new minted setup for gitlab cicd pipeline

--- a/instructions.tex
+++ b/instructions.tex
@@ -25,7 +25,7 @@
 
 \title{Setting up and using Xilinx's KRIA KV260 board \\[1ex] \large \begin{CJK}{UTF8}{min}南山大学\end{CJK}}
 \date{}
-\author{Vincent Conus  -  Source availbe at \gitlab{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation}}
+\author{Vincent Conus  -  Source available at \gitlab{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation}}
 \begin{document}
 
 \maketitle
