--- a/instructions.tex
+++ b/instructions.tex
@@ -44,7 +44,7 @@
 %\label{sec:intr-motiv}
 
 \subsection{Documentation and guides}
-\label{sec:documentation-guides}
+%\label{sec:documentation-guides}
 
 \begin{itemize}
 \item Board product information:\\ 
@@ -71,7 +71,7 @@
 \pagebreak
 % ------------------------------------------------------------------------------
 \section{Boot Image Update}
-\label{sec:boot-image-update}
+%\label{sec:boot-image-update}
 In order to be able to boot a newer version of Linux, the
 boot image of the board must be updated.
 
@@ -79,21 +79,21 @@ The procedure is available in \href{https://docs.xilinx.com/r/en-US/ug1089-kv260
 but I will present it step by step here.
 
 \subsection{Getting the new firmware}
-\label{sec:getting-new-firmware}
+%\label{sec:getting-new-firmware}
 A 2022 version of the board firmware is required in order to run the latest version of Ubuntu properly.
 
 The image can be downloaded at \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1641152513/Kria+K26+SOM#Boot-FW-update-with-xmutil}{the atlassian page on the topic}.
 
 \subsection{Reaching the board recovery tool}
-\label{sec:reach-board-recov}
+%\label{sec:reach-board-recov}
 Now the firmware image is available, it is possible to update it using the boards recovery tool.
 Here are the steps that must be taken in order to reach this tool and update the board:
 
 \begin{itemize}
-\item Connect the board to you machine via Ethernet.
-\item Select the wired network as you connection (must be ``forced'', since it doesn't have internet access).
+\item Connect the board to your machine via Ethernet.
+\item Select the wired network as your connection (must be ``forced'', since it doesn't have internet access).
 \item Set a fixed IP address for your machine, in the \verb|192.168.0.1/24| range, except the specific \verb|192.168.0.111|, which will be used by the board.
-\item Using a web browser on your host machine, access \url{http://192.168.0.111}. You should now see the interface, as visible on the figure \ref{fig:recovery} below.
+\item Using a web browser on your host machine, access \url{http://192.168.0.111}. Thou shall now see the interface, as visible on the figure \ref{fig:recovery} below.
 \item Now the downloaded file can be uploaded as a recovery image in the bottom-right section.
 \end{itemize}
 
@@ -108,7 +108,7 @@ Here are the steps that must be taken in order to reach this tool and update the
 
 %-------------------------------------------------------------------------------
 \section{Ubuntu 22.04}
-\label{sec:ubuntu-22.04}
+%\label{sec:ubuntu-22.04}
 \href{https://ubuntu.com/download/amd-xilinx}{An official Ubuntu image} is provided by Xilinx that allows the OS installation to be quick and
 straightforward. Ubuntu is a common and easy to use distribution. Furthermore, it allows to install ROS2 as a package, which is most convenient
 and will be done later in this guide.
@@ -117,12 +117,12 @@ One the image has been downloaded at Canonical's page (\url{https://ubuntu.com/d
 
 \begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
   WARNING: The next part involve the \verb|dd| command writing on disks!!! \\
-  As always with the dd command, you have to be VERY careful on what arguments you give. Selecting the wrong disk will result on the destruction of your data !! \\
-  \underline{If you are unsure of what to do, seek assistance !}
+  As always with the dd command, thou have to be VERY careful on what arguments thou give. Selecting the wrong disk will result on the destruction of your data !! \\
+  \underline{If thou art unsure of what to do, seek assistance !}
 \end{tcolorbox}
 
 
-With the image available on you machine and a SD card visible as \verb|/dev/sda|\footnote{Again, it is critical to be 100\% certain that you are working with the correct device!}, one can simply run the \verb|dd| command as follow to write the image to a previously formatted drive (here \verb|/dev/sda|):
+With the image available on thy machine and a SD card visible as \verb|/dev/sda|\footnote{Again, it is critical to be 100\% certain that you are working with the correct device!}, one can simply run the \verb|dd| command as follow to write the image to a previously formatted drive (here \verb|/dev/sda|):
 \begin{tcolorbox}
 \begin{verbatim}
 sudo dd if=iot-limerick-kria-classic-desktop-2204-x07-\
@@ -150,7 +150,7 @@ host# ssh ubuntu@192.168.4.11
 \end{tcolorbox}
 
 \subsection{Proxy, DNS and root password}
-\label{sec:proxy-dns}
+%\label{sec:proxy-dns}
 An issue that can occur when connecting the board to the internet is the conflicting situation with
 the school proxy.
 Indeed, as the network at Nanzan University requires to go through a proxy, some DNS errors appeared.
@@ -209,7 +209,7 @@ sudo reboot now
 
 
 \subsection{Setting a static IP address}
-\label{sec:setting-static-ip}
+%\label{sec:setting-static-ip}
 A static IP can be set by writing the following
 configuration into your \verb|netplan| configuration file.
 
@@ -252,7 +252,7 @@ sudo netplan apply
 
 
 \subsection{Extra: removing useless stuff}
-\label{sec:extr-remov-usel}
+%\label{sec:extr-remov-usel}
 As the desktop part is not used at all, there are some packages
 that can be purges in order for the system to become more lightweight.
 
@@ -301,7 +301,7 @@ sudo reboot now
 % ------------------------------------------------------------------------------
 \pagebreak
 \section{Starting remoteproc}
-\label{sec:starting-remoteproc}
+%\label{sec:starting-remoteproc}
 One of the advantage of this board, as cited previously, is the presence of
 multiple types of core (APU, MCU, FPGA) on the same chip.
 
@@ -314,7 +314,7 @@ This section will present how to setup and use as an example the \verb|remotepro
 and RPMsg system.
 
 \subsection{References}
-\label{sec:referances}
+%\label{sec:referances}
 This exact use-case is not exactly presented in the official documentation, but some
 guides were found to eventually put together this procedure.
 
@@ -327,7 +327,7 @@ guides were found to eventually put together this procedure.
 
 
 \subsection{DTO patching}
-\label{sec:dto-patching}
+%\label{sec:dto-patching}
 The communication system and interaction from the Linux side towards the real-time capable core
 is not enabled by default within the Ubuntu image provided by Xilinx.
 
@@ -390,7 +390,7 @@ to be built, we need to setup Xilinx preferred IDE: Vitis.
 
 % ------------------------------------------------------------------------------
 \section{Building and running an example program on the Linux side}
-\label{sec:building-running-an}
+%\label{sec:building-running-an}
 In order to test the deployment of the firmware on the R5F side, and in particular
 to test the RPMsg function, we need some program on the Linux side of the Kria
 board to ``talk'' with the real-time side.
@@ -414,7 +414,7 @@ sudo ln -s $(pwd)/echo_test /usr/bin/
 
 % ------------------------------------------------------------------------------
 \section{Building the micro-ROS static library}
-\label{sec:building-micro-ros}
+%\label{sec:building-micro-ros}
 In this section, the goal is to build the micro-ROS library in order to be
 able to integrate the micro-ROS function into our Cortex R5F firmware.
 All of this should be done via cross-compiling on a host machine, however
@@ -507,7 +507,7 @@ exit
 
 % ------------------------------------------------------------------------------
 \section{Vitis IDE}
-\label{sec:vitis-ide}
+%\label{sec:vitis-ide}
 This is the recommended IDE used to build software for the Xilinx boards.
 It also include the tools to interact with the FPGA part, making the whole
 software very large (around 200GB of disk usage).
@@ -524,7 +524,7 @@ LTS from Ubuntu. For other Linux distributions or operating system, please refer
 
 
 \subsection{Install dependencies}
-\label{sec:install-dependencies}
+%\label{sec:install-dependencies}
 Some packages are required to be installed in order for the installation process to happen successfully:
 \begin{tcolorbox}
 \begin{verbatim}
@@ -561,12 +561,12 @@ is directly the \verb|\$HOME|, but the installation can be set elsewhere is need
 
 % ------------------------------------------------------------------------------
 \section{Building an example firmware for the Cortex R5F}
-\label{sec:bulding-an-example}
+%\label{sec:bulding-an-example}
 As visible on the official \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware}, this section will present the required steps for building a new firmware for the R5F core of our Kria board. The goal
 here is to have a demonstration firmware running, able to use the RPMsg system to communicate with the Linux APU.
 
 \subsection{Generating the platform configuration file}
-\label{sec:gener-platf-conf}
+%\label{sec:gener-platf-conf}
 In order to have the libraries and configurations in the IDE ready to be used for our board, we need to obtain configuration files, as presented in the 
 \href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build_vitis_platform.html?highlight=xsa}{Xilinx guide for Kria and Vitis}. At the \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository}, we can have such configurations, but they required to be built.
 
@@ -595,7 +595,7 @@ make platform PLATFORM=k26_base_starter_kit
 
 \pagebreak
 \subsection{Setting up a new IDE project for the Kria board}
-\label{sec:setting-up-new}
+%\label{sec:setting-up-new}
 With the platform configuration files available, we can now use the IDE to generate a
 new project for our board. The whole process will be described with screen captures and
 captions.
@@ -604,14 +604,14 @@ captions.
   \centering
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project1}
   \caption{We are starting with creating a ``New Application Project''. You should be greeted with this wizard window. Next.}
-  \label{fig:project1}
+%  \label{fig:project1}
 \end{figure}
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project2}
   \caption{For the platform, we need to get our build Kria configuration. In the ``Create a new platform...'' tab, click the ``Browse...'' button.}
-  \label{fig:project2}
+%  \label{fig:project2}
 \end{figure}
 
 \begin{figure}[H]
@@ -619,7 +619,7 @@ captions.
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project3}
   \caption{In the file explorer, we should navigate in the ``k26'' directory, where the configuration file was build.
     From here we are looking for a ``.xsa'' file, located in a ``hw'' directory, as visible.}
-  \label{fig:project3}
+%  \label{fig:project3}
 \end{figure}
 
 \begin{figure}[H]
@@ -627,7 +627,7 @@ captions.
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project4}
   \caption{With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the ``psu\_cortex5\_0'' core
     as a target. The other, Cortex 53 is the APU running Linux.}
-  \label{fig:project4}
+%  \label{fig:project4}
 \end{figure}
 
 \begin{figure}[H]
@@ -635,14 +635,14 @@ captions.
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project5}
   \caption{In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for.
     Once again, we want to use the ``psu\_cortex5\_0''.}
-  \label{fig:project5}
+%  \label{fig:project5}
 \end{figure}
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project6}
   \caption{Here, we want to select ``freertos10\_xilinx'' as our Operating System. The rest can remain unchanged.}
-  \label{fig:project6}
+%  \label{fig:project6}
 \end{figure}
 
 \begin{figure}[H]
@@ -650,7 +650,7 @@ captions.
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project7}
   \caption{Finally, we can select the demonstration template we are going to use; here we go with ``OpenAMP echo-test'' since we want to
     have some simple try of the RPMsg system. Finish.}
-  \label{fig:project7}
+%  \label{fig:project7}
 \end{figure}
 
 
@@ -690,14 +690,14 @@ Many parameters are available to be set up in the IDE for the compilation toolch
 a setup that worked to have the IDE to recognize the include files and to be able to use them
 for compiling the firmware.
 
-\label{sec:including-micro-ros}
+%\label{sec:including-micro-ros}
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/include}
   \caption{Firstly, in the ``C/C++ Build'' settings of your firmware project, under the ``Settings'' menu, you should find the gcc compiler
     ``Directories''. In here you should add the ``include'' directory of your library. Be careful however, if your include files are in
   a second layer of directory (as it is the case for libmicroros) you will need to include each sub-directory individually.}
-  \label{fig:include1}
+%  \label{fig:include1}
 \end{figure}
 
 \begin{figure}[H]
@@ -705,7 +705,7 @@ for compiling the firmware.
   \includegraphics[width=0.6\textwidth]{./img/vitis_new/include2}
   \caption{Secondly, in the gcc linkers ``Libraries'', you can add the top level directory of your library. In our case, it is the
     directory that contains both the ``include'' directory added earlier, and also the ``libmicroros.a'' file.}
-  \label{fig:include2}
+%  \label{fig:include2}
 \end{figure}
 
 With both of these setup in your project, you should be able to include the following micro-ROS libraries into your project:
@@ -733,43 +733,62 @@ scp /home/sunoc/workspace/rpmsg_pingpong_microros_lib/\
 \end{tcolorbox}
 
 % ------------------------------------------------------------------------------
-\section{WIP:: Using micro-ROS in a Kria demonstration project}
-\label{sec:kriademomicroros}
-Beyond the inclusion of the library, actually using the micro-ROS system
+\section{Using micro-ROS in a Kria demonstration project}
+%\label{sec:kriademomicroros}
+Beyond the inclusion of the library itself, actually using the micro-ROS system
 within an external project require more than just importing the needed
 functions.
 
-Indeed, if you would be just adding the various function for sending messages to the
-general ROS2 network, you would face issues with three key aspects, namely:
+Indeed, if you would be just adding the various function for sending messages to
+the general ROS2 network, you would face issues with three key aspects, namely:
 \begin{itemize}
 \item Time-related functions, in particular \verb|clock_gettime|.
 \item Memory allocation functions.
 \item Communication function.
 \end{itemize}
 
-All three points requires some custom function, specific for the board.
+All three points requires some custom functions in order for the library to
+know what to do with these types of function it is trying to use.
 In our case, I will present the implementation of these functions for the
 Kria board.
 
 \subsection{Custom time-related functions}
-\label{sec:timefuncs}
+%\label{sec:timefuncs}
+The end result for these implementation are visible in the appendix
+\ref{sec:timefunctions}.
 
-The end result is visible in the appendix \ref{sec:timefunctions}.
+As micro-ROS can be used on a variety of board, it does not understand by itself
+what time functions are meant to be used, so some API-style function are being
+used in the library and it is then needed for the person using a new board
+to implement these function inner working using the board own time-related
+function calls.
 
+In particular for this part, the \verb|clock_gettime| function is key, and could
+simply be implemented with some FreeRTOS time functions.
+Again, please refer to the appendix \ref{sec:timefunctions} for details.
 
-\subsection{Custom memory allocator functions}
-\label{sec:memallocators}
+\subsection{WIP:: Custom memory allocator functions}
+% \label{sec:memallocators}
+Similarly, it is required to re-implement some form of memory allocating
+functions in order for the library to be able to work with such functionalities
+in a formalized way.
 
-\subsection{Custom transport layer functions}
-\label{sec:transportlayer}
+As for now, the current version of the allocator function can be seen in the
+appendix \ref{sec:allocfunctions}, but the current setup is not working
+properly yet and some further test and modification will be needed.
 
+\subsection{WIP:: Custom transport layer functions}
+%\label{sec:transportlayer}
+This part is the key translation layer that needs to happen in order for the
+DDS system from the micro-ROS library to be using the communication channel we
+want it to.
 
 
 
 % -------------------------------------------------------------------------------
 %\pagebreak
 \section{Loading a new firmware from Linux}
-\label{sec:loading-new-firmware}
+%\label{sec:loading-new-firmware}
 Having now the latest version of our firmware (with or without the included micro-ROS library) loaded onto our Kria's Linux, we want to load and run it
 on the Cortex micro-controller side.
 
@@ -873,13 +892,13 @@ You should be able to see the first terminal sending "Hello world" messages, and
 
 % ------------------------------------------------------------------------------
 \section{ROS2 in a container}
-\label{sec:ros2-container}
+%\label{sec:ros2-container}
 As it is used to test and build micro-ROS configurations, running ROS2 in a Docker container is a great way to have a reproducible configuration
 of you system. This part of the guide will present how to install Docker on the Kria board and then how to use it to deploy the latest
 version of ROS2.
 
 \subsection{Installing docker}
-\label{sec:installing-docker}
+%\label{sec:installing-docker}
 It is possible to have a version of Docker installed simply by using the available repository, but since we are on Ubuntu, a PPA is available
 from Docker in order to have the most up-to-date version.
 Following \href{https://docs.docker.com/engine/install/ubuntu/#install-using-the-repository}{the official documentation}, the following steps can be taken to
@@ -921,7 +940,7 @@ docker run hello-world
 \end{figure}
 
 \subsection{Calling a ROS2 container}
-\label{sec:call-ros2-cont}
+%\label{sec:call-ros2-cont}
 The following commands will pull a ROS container, version \verb|humble|, and name it \verb|ros_build|.
 A key part for having access to the interfaces (serial) is the mapping of whole the \verb|/dev| of  the host machine to the
 internal \verb|/dev|. \footnote{Note that this is an example and this situation can become a security issue. It would be a better practice
@@ -1018,9 +1037,42 @@ the container in which the previous setup were install, not on the host running 
 
 \subsection{Header file with definitions}
 \begin{minted}[linenos]{c}
-#define MICROSECONDS_PER_SECOND    ( 1000000LL )                                   /**< Microseconds per second. */
-#define NANOSECONDS_PER_SECOND     ( 1000000000LL )                                /**< Nanoseconds per second. */
-#define NANOSECONDS_PER_TICK       ( NANOSECONDS_PER_SECOND / configTICK_RATE_HZ ) /**< Nanoseconds per FreeRTOS tick. */  
+  /**< Microseconds per second. */
+  #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
+  /**< Nanoseconds per second. */
+  #define NANOSECONDS_PER_SECOND     ( 1000000000LL ) 
+  /**< Nanoseconds per FreeRTOS tick. */  
+  #define NANOSECONDS_PER_TICK       ( NANOSECONDS_PER_SECOND / configTICK_RATE_HZ ) 
 \end{minted}
+
+
+% ------------------------------------------------------------------------------
+\pagebreak
+\section{Firmware memory allocation functions}
+\label{sec:allocfunctions}
+
+\subsection{Main function}
+\inputminted[linenos]{c}{./src/allocators.c}
+
+\subsection{Header file with definitions}
+\begin{minted}[linenos]{c}
+#ifndef _ALLOCATORS_H_
+#define _ALLOCATORS_H_
+
+#include "microros.h"
+
+extern int absoluteUsedMemory;
+extern int usedMemory;
+
+
+void * __freertos_allocate(size_t size, void * state);
+void __freertos_deallocate(void * pointer, void * state);
+void * __freertos_reallocate(void * pointer, size_t size, void * state);
+void * __freertos_zero_allocate(size_t number_of_elements,
+size_t size_of_element, void * state);
+
+#endif // _ALLOCATORS_H_
+\end{minted}
+
 
 \end{document}
